<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="423dp"
        android:layout_height="match_parent"
        android:src="@drawable/letsmeet" />

    <ImageView
        android:id="@+id/imageButton3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBienve"
            android:layout_width="0dp"
            android:layout_height="60"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout9"
            app:layout_constraintTop_toBottomOf="@+id/txtBienve"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primerave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#33FFFFFF"
                android:text="@string/conocenos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout10"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
            tools:layout_editor_absoluteX="-9dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todavia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#33FFFFFF"
                android:text="@string/Registrart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout9">

            <TextView
                android:id="@+id/txtnombre"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nombreRegistro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputnombre"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="20dp"
                android:hint="Introduzca su nombre de usuario"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtnombre"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputContraseñaLogin"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:hint="Introduzca su contraseña"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtcontraseña" />

            <TextView
                android:id="@+id/txtcontraseña"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/nombree"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#33FFFFFF"
            android:text="@string/iniciarses"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2">

            <Button
                android:id="@+id/btnIngles"

                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/ingles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="170dp" />

            <Button
                android:id="@+id/btnEspañol"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/españa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />

            <Button
                android:id="@+id/btnFrances"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/francia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>