<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".PantallaCreacionPersonaje">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="423dp"
        android:layout_height="match_parent"
        android:src="@drawable/letsmeet" />

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/crearUsuario"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/layoutCrearQuedadaCinco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCrearQuedadaCinco"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRegistro">

            <TextView
                android:id="@+id/textNombre"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/nombreRegistro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nombreinput"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="Eustakeo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textNombre"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutCrearQuedadaCinco">

            <TextView
                android:id="@+id/textApellido"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/apellidoRegistro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/apellidoInput"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="Moreno"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textApellido"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/txtNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/edadRegistro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputNomrbeUsuario"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="Eustakeo477"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtNombreUsuario"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

            <TextView
                android:id="@+id/textContraseña"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/direccionRegistro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputContraseña"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="3vSTK3OO@GHOLAÇ"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textContraseña"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/botonRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <TextView
                android:id="@+id/textSubs"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:text="@string/subcripcionRegistro"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="80dp"

                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textSubs"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioSi"
                    android:layout_width="50dp"
                    android:textSize="12sp"

                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="si" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:textSize="12sp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="no" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <TextView
                android:id="@+id/textDni"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/dniRegistro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputDni"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="44668264B"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textDni"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:id="@+id/textCorreo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/mailRegistro"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />

            <EditText
                android:id="@+id/inputMail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="vvvvvv@gmail.com"
                android:textColorHint="#757575"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textCorreo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.466" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#33FFFFFF"
            android:text="@string/btnContinuarRegistro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>